--- a/css/page-specifics.less
+++ b/css/page-specifics.less
@@ -207,15 +207,6 @@ color: #333;
 
 		.desserts-container {
 
-			
-			.menu-container {
-				
-				@media only screen and (max-width : @large-desktop) {
-				
-					background:red;
-				}
-			}
-
 			.two-cols {
 
 				@media only screen and (max-width : @large-desktop) {
@@ -260,6 +251,10 @@ color: #333;
 					@media only screen and (max-width : @tablets) { 
 						width: auto;
 					}
+
+					@media only screen and (max-width : @large-desktop) {
+						width:auto;
+					}
 				}
 
 				.dessert {
@@ -301,7 +296,7 @@ color: #333;
 					}
 
 					@media only screen and (max-width : @large-desktop) {
-						width:55% !important;
+						width:60% !important;
 						float:left !important;
 					}
 				}
